--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <!-- Sección de Portafolio -->
 <section id="portafolio" class="portfolio">
-    <h2>Mi Portafolio</h2>
+    <h2>PORTAFOLIO</h2>
     <p>Una selección de nuestros proyectos más recientes y destacados.</p>
     <div id="#portfolio"class="projects">
         <div class="project-item">
